--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
-    "@ionic/angular": "^6.5.4",
+    "@ionic/angular": "^6.6.2-dev.11678390792.160fa5e6",
     "rxjs": "~6.6.0",
     "swiper": "^9.1.0",
     "tslib": "^2.2.0",
